fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-image: url(../img/main_bg.png);
     background-color: #EBF0F8;
@@ -21,8 +25,8 @@ body {
     font-size: 16px;
     color: #666666;
     font-weight: 400;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 
@@ -46,18 +50,17 @@ body {
 }
 
 .pdb100 {
-    padding: 100px 0px;
+    padding-bottom: 100px;
 }
 
 .pdb50 {
-    padding: 50px 0px;
+    padding-bottom: 50px;
 }
 
 .pdb20 {
-    padding: 20px 0px;
-}
+    padding-bottom: 20px;
 
-.section-title {}
+}
 
 .section-title h3 {
     font-size: 24px;
@@ -95,7 +98,7 @@ body {
     padding: 20px 15px;
     background: #fff;
     overflow: hidden;
-    top: 70px;
+    top: 30px;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -118,8 +121,7 @@ body {
 /* hero */
 
 .hero {
-    padding-top: 200px;
-    padding-bottom: 50px;
+    padding: 150px 0px;
 }
 
 .hero .hero-left {
@@ -184,7 +186,6 @@ body {
 }
 
 /* i-do */
-.i-do {}
 
 .i-do .ido-content {
     margin-bottom: 50px;
@@ -224,7 +225,6 @@ body {
 
 /* Skill */
 
-.skil-section {}
 
 .skil-section .skill-title {
     max-width: 60%;
@@ -258,7 +258,6 @@ body {
 }
 
 /* social */
-.social {}
 
 .social .social-media {
     background: #fff;
